# PyGeM

./: .buildinfo  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .pylintrc  .travis.yml  LICENSE.html  LICENSE.rst  README.md  cad_deformation.html  code.html  contact.html  contributing.html  custom_deformation.html  custom_deformation_cad.html  deform_cube.stl  deform_cube.vtp  ffd.html  ffdcad.html  filehandler.html  genindex.html  idw.html  idwcad.html  index.html  objects.inv  openfhandler.html  py-modindex.html  pyproject.toml  rbf.html  rbf_factory.html  rbfcad.html  requirements.txt  search.html  searchindex.js  setup.py  stlhandler.html  test.py  tutorials.html  unvhandler.html  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-wanted.md
.github/workflows/: ci.yml  sphinx-build.yml  testing_pr.yml
_modules/: index.html
_modules/pygem/: custom_deformation.html  ffd.html  filehandler.html  idw.html  openfhandler.html  rbf.html  rbf_factory.html  stlhandler.html  unvhandler.html  vtkhandler.html
_modules/pygem/cad/: cad_deformation.html  custom_deformation.html  ffd.html  idw.html  rbf.html
dockerfiles/: docker-run
dockerfiles/base/: Dockerfile  WELCOME
dockerfiles/dev-env-base/: Dockerfile  docker-run
docs/source/: affine.rst  bffd.rst  cffd.rst  code.rst  conf.py  contributing.rst  igeshandler.rst  nurbshandler.rst  openfhandler.rst  stephandler.rst  stlhandler.rst  tutorials.rst  unvhandler.rst  vffd.rst  vtkhandler.rst
docs/source/_tutorials/: tutorial-7-cffd.html  tutorial-8-cffd.html
pygem/: __init__.py  bffd.py  cffd.py  custom_deformation.py  deformation.py  elmerhandler.py  ffd.py  filehandler.py  freeform.py  gui.py  idw.py  igeshandler.py  khandler.py  mdpahandler.py  meta.py  nurbshandler.py  openfhandler.py  params.py  rbf.py  rbf_factory.py  stephandler.py  stlhandler.py  unvhandler.py  utilities.py  utils.py  vffd.py  vtkhandler.py
pygem/cad/: __init__.py  cad_deformation.py  custom_deformation.py  ffd.py  idw.py  igeshandler.py  nurbshandler.py  rbf.py  stephandler.py
tests/: test_bffd.py  test_cffd.py  test_custom_deformation.py  test_custom_deformation_cad.py  test_elmerhandler.py  test_ffd.py  test_ffdcad.py  test_ffdparams.py  test_filehandler.py  test_gui.py  test_idw.py  test_igeshandler.py  test_khandler.py  test_mdpahandler.py  test_nurbshandler.py  test_openfhandler.py  test_package.py  test_radial.py  test_rbf.py  test_rbf_factory.py  test_stephandler.py  test_stlhandler.py  test_unvhandler.py  test_utilities.py  test_utils.py  test_vffd.py  test_vtkhandler.py
tests/test_datasets/: box_modified_test_sphere_true_version5.vtk  box_modified_test_sphere_true_version6.vtk  box_test_sphere_true_version5.vtk  box_test_sphere_true_version6.vtk  parameters_test_cffd.prm  test_cffd.prm  test_pipe_out_true.step  test_pipe_out_true.stp  test_sphere_cffd.npy  test_sphere_cffd.stl  test_sphere_out_true_bin.stl  test_square.k
tutorials/: README.md  test_pipe_deformed.iges  tutorial-2-iges.ipynb  tutorial-3-unv.ipynb  tutorial-6-k.ipynb  tutorial-6-k.py  tutorial-7-mdpa.ipynb  tutorial-7-mdpa.py
tutorials/tutorial1/: tutorial-1-ffd.ipynb  tutorial-1-ffd.py
tutorials/tutorial2/: test_pipe_deformed.iges  tutorial-2-iges.ipynb  tutorial-2-iges.py
tutorials/tutorial3/: tutorial-3-rbf.ipynb  tutorial-3-rbf.py
tutorials/tutorial4/: tutorial-4-idw.ipynb  tutorial-4-idw.py
tutorials/tutorial5/: tutorial-5-file.ipynb  tutorial-5-file.py
tutorials/tutorial6/: tutorial-6-ffd-rbf.ipynb  tutorial-6-ffd-rbf.py
tutorials/tutorial7/: tutorial-7-cffd.ipynb  tutorial-7-cffd.py
tutorials/tutorial8/: tutorial-8-cffd.ipynb
